replace command's description in circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,7 @@
 deployment:
   staging:
     branch: master
-    heroku:
-      appname: agile-dusk-1843
+    commands:
+      - git push git@heroku.com:agile-dusk-1843.git $CIRCLE_SHA1:master
+      - heroku run rake db:migrate --app agile-dusk-1843
+
