--- a/circle.yml
+++ b/circle.yml
@@ -6,5 +6,5 @@ deployment:
   production:
     branch: master
     commands:
-      - git push git@heroku.com:agile-dusk-1843.git $CIRCLE_SHA1:master
-      - heroku run rake db:migrate --app agile-dusk-1843
+      - git push git@heroku.com:vast-headland-3232.git $CIRCLE_SHA1:master
+      - heroku run rake db:migrate --app vast-headland-3232
