--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,6 @@ deployment:
   production:
     branch: master
     commands:
-      - git push git@heroku.com:vast-headland-3232.git $CIRCLE_SHA1:master
-      - heroku run rake db:migrate --app vast-headland-3232
+      - git push git@heroku.com:fathomless-island-4893.git $CIRCLE_SHA1:master
+      - heroku run rake db:migrate --app fathomless-island-4893
 
