--- a/circle.yml
+++ b/circle.yml
@@ -5,9 +5,7 @@ general:
 deployment:
   production:
     branch: master
-    heroku:
-      appname: fathomless-island-4893
-#    commands:
-#      - git push git@heroku.com:fathomless-island-4893.git $CIRCLE_SHA1:master
-#      - heroku run rake db:migrate --app fathomless-island-4893
+    commands:
+      - git push git@heroku.com:fathomless-island-4893.git $CIRCLE_SHA1:master
+      - heroku run rake db:migrate --app fathomless-island-4893
 
