git push commands in from circle.yml to other script file(in deploy-to-heroku-master)

--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,4 @@ deployment:
   production:
     branch: master
     commands:
-      - git push git@heroku.com:fathomless-island-4893.git $CIRCLE_SHA1:master
-      - heroku run rake db:migrate --app fathomless-island-4893
-
+      - ./deploy-to-heroku-master
